--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,8 +19,10 @@
       }
     ],
     "paths": {
+      "@lib": ["./src/lib/*"],
       "@/*": ["./src/*"]
-    }
+    },
+    "strictNullChecks": true
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
