:recycle: refactor: implement Lenis with the LenisProvider

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
       "types/*": ["./src/@types/*"],
       "@components/*": ["./src/components/*"],
       "@lib/*": ["./src/lib/*"],
+      "@providers/*": ["./src/providers/*"],
       "@services/*": ["./src/services/*"],
       "@utils/*": ["./src/utils/*"],
       "@/*": ["./src/*"]
