:sparkles: feat: integrate @t3-oss/env-nextjs for environment variable management and add zod for validation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
     "paths": {
       "types/*": ["./src/@types/*"],
       "@components/*": ["./src/components/*"],
+      "@config/*": ["./src/config/*"],
       "@lib/*": ["./src/lib/*"],
       "@providers/*": ["./src/providers/*"],
       "@services/*": ["./src/services/*"],
