--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "lenis": "^1.3.4",
     "lucide-react": "^0.525.0",
     "motion": "^12.23.3",
-    "next": "15.3.5",
+    "next": "15.5.0",
     "next-themes": "^0.4.6",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.0.5"
   },
@@ -32,11 +32,15 @@
     "@tailwindcss/postcss": "^4",
     "@types/aos": "^3.0.7",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "19.1.10",
+    "@types/react-dom": "19.1.7",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.5",
     "typescript": "^5",
     "ultracite": "5.0.32"
+  },
+  "overrides": {
+    "@types/react": "19.1.10",
+    "@types/react-dom": "19.1.7"
   }
 }
