--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-hover-card": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.3",
     "@t3-oss/env-nextjs": "^0.13.8",
     "@tabler/icons-react": "^3.34.0",
@@ -20,9 +21,10 @@
     "dayjs": "^1.11.13",
     "lenis": "^1.3.4",
     "lucide-react": "^0.525.0",
-    "motion": "^12.23.3",
+    "motion": "^12.23.24",
     "next": "16.0.3",
     "next-themes": "^0.4.6",
+    "qss": "^3.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "tailwind-merge": "^3.3.1",
