--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "lenis": "^1.3.4",
     "lucide-react": "^0.525.0",
     "motion": "^12.23.24",
-    "next": "16.0.3",
+    "next": "16.0.8",
     "next-themes": "^0.4.6",
     "qss": "^3.0.0",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "19.2.1",
+    "react-dom": "19.2.1",
     "react-markdown": "^10.1.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.0.5"
@@ -38,7 +38,7 @@
     "@tailwindcss/typography": "^0.5.19",
     "@types/aos": "^3.0.7",
     "@types/node": "^20",
-    "@types/react": "19.2.5",
+    "@types/react": "19.2.7",
     "@types/react-dom": "19.2.3",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.5",
@@ -48,5 +48,11 @@
   "overrides": {
     "@types/react": "19.2.5",
     "@types/react-dom": "19.2.3"
+  },
+  "pnpm": {
+    "overrides": {
+      "@types/react": "19.2.7",
+      "@types/react-dom": "19.2.3"
+    }
   }
 }
