--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "lenis": "^1.3.4",
     "lucide-react": "^0.525.0",
     "motion": "^12.23.24",
-    "next": "16.0.8",
+    "next": "16.1.1",
     "next-themes": "^0.4.6",
     "qss": "^3.0.0",
-    "react": "19.2.1",
-    "react-dom": "19.2.1",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
     "react-markdown": "^10.1.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.0.5"
@@ -42,14 +42,11 @@
     "@types/node": "^20",
     "@types/react": "19.2.7",
     "@types/react-dom": "19.2.3",
+    "babel-plugin-react-compiler": "^1.0.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.5",
     "typescript": "^5",
     "ultracite": "5.0.32"
-  },
-  "overrides": {
-    "@types/react": "19.2.5",
-    "@types/react-dom": "19.2.3"
   },
   "pnpm": {
     "overrides": {
