--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "format": "biome check --write"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.10",
@@ -36,7 +36,7 @@
     "zod": "^4.0.5"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.0.6",
+    "@biomejs/biome": "2.3.11",
     "@tailwindcss/postcss": "^4",
     "@tailwindcss/typography": "^0.5.19",
     "@types/aos": "^3.0.7",
@@ -46,8 +46,7 @@
     "babel-plugin-react-compiler": "^1.0.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.5",
-    "typescript": "^5",
-    "ultracite": "5.0.32"
+    "typescript": "^5"
   },
   "pnpm": {
     "overrides": {
