--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "qss": "^3.0.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-github-calendar": "^5.0.4",
     "react-markdown": "^10.1.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.0.5"
