--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next": "16.1.1",
     "next-themes": "^0.4.6",
     "qss": "^3.0.0",
+    "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-github-calendar": "^5.0.4",
